feat: add Line phone number observations
